--- a/FileWatchBatch/build.gradle
+++ b/FileWatchBatch/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.1'
 }
 
 jar {
