--- a/FileWatchBatch/lib/application.yml
+++ b/FileWatchBatch/lib/application.yml
@@ -4,26 +4,23 @@ scheduled:
   ###有効フラグ
   active:
     batch001: 1
-    batch002: 0
-    batch003: 0
   ###実行間隔
-  batch001:
-    delay:
+  delay:
+    batch001:
       initial: 0
       fixed: 0
 
 ##監視設定
-watche:
+watch:
   ###対象ディレクトリ
   target:
     directory:
       path: C:/tmp/work/WatchTarget/from
-  ###監視対象ファイル拡張子
-  file:
-    extension: *
-
-##ファイル移動先バッチ設定
-move:
-  to:
-    directory:
-      path: C:/tmp/work/WatchTarget/to
+    ###監視対象ファイル拡張子
+    file:
+      extension: *
+    ###ファイル移動先バッチ設定
+    move:
+      to:
+        directory:
+          path: C:/tmp/work/WatchTarget/to
